--- a/Amharic_Tokenizer.ipynb
+++ b/Amharic_Tokenizer.ipynb
@@ -6,7 +6,7 @@
       "name": "Amharic-Tokenizer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfy/VbcWU/+F/Zn5VS4dSc",
+      "authorship_tag": "ABX9TyPMfMrg5tIbQfur8gI6p1pf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "import sentencepiece as spm\n",
         "import time"
       ],
-      "execution_count": 8,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -56,8 +56,17 @@
       "source": [
         "dataPath = '/content/mono-am'"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KPMLMlcxKhd0"
+      },
+      "source": [
+        "# **Function that processes number of lines, blank lines, sentences, and words in a give file.**"
+      ]
     },
     {
       "cell_type": "code",
@@ -93,7 +102,7 @@
         "  print(f\"Sentences     : \", sentences)\n",
         "  print(f\"Words         : \", words)"
       ],
-      "execution_count": 37,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -103,12 +112,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4fAlF1wGWsV",
-        "outputId": "e83dda0e-1589-4b3d-8ae9-898d00b2d121"
+        "outputId": "a71c1d6d-1ef4-4e2c-d72b-ae2571bf2f31"
       },
       "source": [
         "processFile(dataPath)"
       ],
-      "execution_count": 36,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,104 +133,277 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ml5U20NDK7Th"
+      },
+      "source": [
+        "# **Train sentencePiece for Amharic using BPE (Byte Pair Encoding)**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Y8CcKZVZ6h-5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y8CcKZVZ6h-5",
+        "outputId": "29dcf940-675c-4b9a-a5bd-caa372e13727"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-bpe', vocab_size=16000, model_type=\"bpe\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--- 9.052777528762817 seconds ---\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7d1K4guC7dB2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7d1K4guC7dB2",
+        "outputId": "790ff8c5-9a7b-4442-a501-49488905fddb"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-bpe.model')\n",
         "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['▁ለአ', 'ማርኛ', '▁ተናጋሪ', 'ዎች', '▁የቀረ', 'በ', '▁መረጃ']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "736gQDu3LkHg"
+      },
+      "source": [
+        "# **Train sentencePiece for Amharic using Unigram.**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-ro6Og0N_Z3t"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ro6Og0N_Z3t",
+        "outputId": "8254b16d-ebc0-4d89-b92f-7d933fc5b1c3"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-unigram', vocab_size=16000, model_type=\"unigram\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--- 20.374517917633057 seconds ---\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3LWP782zAX58"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3LWP782zAX58",
+        "outputId": "3be87934-341e-4487-c25a-95b335be71b6"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-unigram.model')\n",
         "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['▁ለ', 'አማርኛ', '▁ተናጋሪዎች', '▁የቀረበ', '▁መረጃ']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ta0__9mOLnYa"
+      },
+      "source": [
+        "# **Train sentencePiece for Amharic using charcters**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BZ8bOOfpBaUJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BZ8bOOfpBaUJ",
+        "outputId": "d0610dc1-a7ca-4ed4-8aba-d421f305373c"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-char', vocab_size=16000, model_type=\"char\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--- 0.26238393783569336 seconds ---\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T3epS8_TBaUL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T3epS8_TBaUL",
+        "outputId": "e1433a36-702b-42ef-d237-3c2d94a6d94d"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-char.model')\n",
         "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['▁',\n",
+              " 'ለ',\n",
+              " 'አ',\n",
+              " 'ማ',\n",
+              " 'ር',\n",
+              " 'ኛ',\n",
+              " '▁',\n",
+              " 'ተ',\n",
+              " 'ና',\n",
+              " 'ጋ',\n",
+              " 'ሪ',\n",
+              " 'ዎ',\n",
+              " 'ች',\n",
+              " '▁',\n",
+              " 'የ',\n",
+              " 'ቀ',\n",
+              " 'ረ',\n",
+              " 'በ',\n",
+              " '▁',\n",
+              " 'መ',\n",
+              " 'ረ',\n",
+              " 'ጃ']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gUAvPZTPLuYR"
+      },
+      "source": [
+        "# **Train sentencePiece for Amharic using words**"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ETUjzrjDBxDk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETUjzrjDBxDk",
+        "outputId": "80f8cf53-af91-4168-dead-c33b0baf99a0"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-word', vocab_size=16000, model_type=\"word\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--- 0.4852330684661865 seconds ---\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JaYURM8uBxDm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JaYURM8uBxDm",
+        "outputId": "c71e0824-4ed1-4446-e7a5-5f2ebdfded98"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-word.model')\n",
         "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['▁ለአማርኛ', '▁ተናጋሪዎች', '▁የቀረበ', '▁መረጃ']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
     }
   ]
 }
