Add drive mount

--- a/Amharic_Tokenizer.ipynb
+++ b/Amharic_Tokenizer.ipynb
@@ -6,7 +6,8 @@
       "name": "Amharic-Tokenizer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMfMrg5tIbQfur8gI6p1pf",
+      "mount_file_id": "1qGBG716c1WAS8449NfQiRj3rvt7njmyN",
+      "authorship_tag": "ABX9TyOei+tPkCxQpM8YVfnTLXDR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +29,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iyMFL8dK3StB"
+        "id": "iyMFL8dK3StB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3added65-6be9-4b5f-ea02-ff3431f927f5"
       },
       "source": [
         "!pip install sentencepiece"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (0.1.95)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -45,19 +58,56 @@
         "import sentencepiece as spm\n",
         "import time"
       ],
-      "execution_count": 38,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N6py_iBFAteN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ajTf5tl9Iuai",
+        "outputId": "4265530f-e0b4-4623-a24c-5a6331f4235c"
       },
       "source": [
-        "dataPath = '/content/mono-am'"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
       ],
-      "execution_count": 39,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N6py_iBFAteN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "df7a86e6-fd87-430f-a776-df967abf9274"
+      },
+      "source": [
+        "dataPath = 'drive/MyDrive/Colab_Notebooks/am-mono'\n",
+        "print(dataPath)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "drive/MyDrive/Colab_Notebooks/am-mono\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -97,12 +147,12 @@
         "  file.close()\n",
         "\n",
         "  print(f\"-\"*50)\n",
-        "  print(f\"Lines         : \", lines)\n",
-        "  print(f\"Blank lines   : \", blanklines)\n",
-        "  print(f\"Sentences     : \", sentences)\n",
-        "  print(f\"Words         : \", words)"
+        "  print(f\"Lines         : {lines:,d}\")\n",
+        "  print(f\"Blank lines   : {blanklines:,d}\")\n",
+        "  print(f\"Sentences     : {sentences:,d}\")\n",
+        "  print(f\"Words         : {words:,d}\")"
       ],
-      "execution_count": 40,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -112,21 +162,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4fAlF1wGWsV",
-        "outputId": "a71c1d6d-1ef4-4e2c-d72b-ae2571bf2f31"
+        "outputId": "a0416faf-8d94-4e35-c14a-126342d7cf6e"
       },
       "source": [
         "processFile(dataPath)"
       ],
-      "execution_count": 41,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "--------------------------------------------------\n",
-            "Lines         :  19873\n",
-            "Blank lines   :  1474\n",
-            "Sentences     :  38298\n",
-            "Words         :  399339\n"
+            "Lines         : 1,418,958\n",
+            "Blank lines   : 1,466\n",
+            "Sentences     : 1,354,112\n",
+            "Words         : 22,222,977\n"
           ],
           "name": "stdout"
         }
@@ -148,19 +198,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y8CcKZVZ6h-5",
-        "outputId": "29dcf940-675c-4b9a-a5bd-caa372e13727"
+        "outputId": "c19377a3-ea44-4a7e-d1b6-5be372ac6ada"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-bpe', vocab_size=16000, model_type=\"bpe\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 42,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--- 9.052777528762817 seconds ---\n"
+            "--- 76.94041609764099 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -173,25 +223,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7d1K4guC7dB2",
-        "outputId": "790ff8c5-9a7b-4442-a501-49488905fddb"
+        "outputId": "f1413394-fd0b-46c4-85fc-c23e98548b3b"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-bpe.model')\n",
-        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
+        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ።', out_type=str)"
       ],
-      "execution_count": 43,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['▁ለአ', 'ማርኛ', '▁ተናጋሪ', 'ዎች', '▁የቀረ', 'በ', '▁መረጃ']"
+              "['▁ለአ', 'ማርኛ', '▁ተና', 'ጋ', 'ሪዎች', '▁የቀረበ', '▁መረጃ', '።']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 24
         }
       ]
     },
@@ -211,19 +261,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-ro6Og0N_Z3t",
-        "outputId": "8254b16d-ebc0-4d89-b92f-7d933fc5b1c3"
+        "outputId": "a7a88f29-bc10-4c34-e649-8dd926c438d2"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-unigram', vocab_size=16000, model_type=\"unigram\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 44,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--- 20.374517917633057 seconds ---\n"
+            "--- 266.321985244751 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -236,25 +286,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3LWP782zAX58",
-        "outputId": "3be87934-341e-4487-c25a-95b335be71b6"
+        "outputId": "305c435b-60f2-4d63-b0e6-75be67691889"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-unigram.model')\n",
-        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
+        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ።', out_type=str)"
       ],
-      "execution_count": 45,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['▁ለ', 'አማርኛ', '▁ተናጋሪዎች', '▁የቀረበ', '▁መረጃ']"
+              "['▁ለአ', 'ማር', 'ኛ', '▁ተናጋሪ', 'ዎች', '▁የቀረበ', '▁መረጃ', '።']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 26
         }
       ]
     },
@@ -274,19 +324,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BZ8bOOfpBaUJ",
-        "outputId": "d0610dc1-a7ca-4ed4-8aba-d421f305373c"
+        "outputId": "b5ea48f9-3e6f-4fb2-9205-e979b5efcb48"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-char', vocab_size=16000, model_type=\"char\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 46,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--- 0.26238393783569336 seconds ---\n"
+            "--- 16.90510058403015 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -299,13 +349,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T3epS8_TBaUL",
-        "outputId": "e1433a36-702b-42ef-d237-3c2d94a6d94d"
+        "outputId": "32b3ffff-48a0-46e6-b928-c2a0fbcb45b7"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-char.model')\n",
-        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
+        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ።', out_type=str)"
       ],
-      "execution_count": 47,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,13 +382,14 @@
               " '▁',\n",
               " 'መ',\n",
               " 'ረ',\n",
-              " 'ጃ']"
+              " 'ጃ',\n",
+              " '።']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 28
         }
       ]
     },
@@ -358,19 +409,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ETUjzrjDBxDk",
-        "outputId": "80f8cf53-af91-4168-dead-c33b0baf99a0"
+        "outputId": "e20f68de-2a14-49a3-9b79-dd7cbe713154"
       },
       "source": [
         "start_time = time.time()\n",
         "spm.SentencePieceTrainer.train(input=dataPath, model_prefix='am-word', vocab_size=16000, model_type=\"word\", character_coverage=1.0)\n",
         "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 48,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--- 0.4852330684661865 seconds ---\n"
+            "--- 24.534483909606934 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -383,25 +434,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JaYURM8uBxDm",
-        "outputId": "c71e0824-4ed1-4446-e7a5-5f2ebdfded98"
+        "outputId": "2c2b1602-381a-4200-a6d0-1a82eed29bd9"
       },
       "source": [
         "model = spm.SentencePieceProcessor(model_file='am-word.model')\n",
-        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ', out_type=str)"
+        "model.encode('ለአማርኛ ተናጋሪዎች የቀረበ መረጃ።', out_type=str)"
       ],
-      "execution_count": 49,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['▁ለአማርኛ', '▁ተናጋሪዎች', '▁የቀረበ', '▁መረጃ']"
+              "['▁ለአማርኛ▁ተናጋሪዎች', '▁የቀረበ', '▁መረጃ።']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 37
         }
       ]
     }
